kubernetes/apps/base/media/media-robbinsdale/jellyfin/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes-excludes: media
      labels:
        app: jellyfin
    spec:
      hostname: jellyfin-robbinsdale
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:10.11.11
          ports:
            - name: http
              containerPort: 8096
              protocol: TCP
          volumeMounts:
            - name: media
              mountPath: /media-share
            - name: config-volume
              mountPath: /config
            - name: transcode
              mountPath: /config/transcodes
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-share
        - name: config-volume
          persistentVolumeClaim:
            claimName: jellyfin-config-ceph
        - name: transcode
          emptyDir:
            medium: Memory
            sizeLimit: 4Gi
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
    - name: http
      port: 8096
      protocol: TCP
      targetPort: 8096
  type: ClusterIP
