kubernetes/apps/base/media/media-robbinsdale/jellyfin/backendtrafficpolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: jellyfin-streaming
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: jellyfin
  httpUpgrade:
    - type: websocket
  connection:
    bufferLimit: 32768
  timeout:
    http:
      connectionIdleTimeout: 900s
      maxConnectionDuration: 0s
      requestTimeout: 0s
