kubernetes/apps/base/media/media-robbinsdale/jellyfin/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: media
  annotations:
    item.homer.rajsingh.info/name: "Jellyfin"
    item.homer.rajsingh.info/subtitle: "TV/Movies/Music/Books"
    item.homer.rajsingh.info/logo: "https://raw.githubusercontent.com/jellyfin/jellyfin/refs/heads/master/Jellyfin.Server/Jellyfin.Server.ico"
    item.homer.rajsingh.info/keywords: "media, server, streaming"

    service.homer.rajsingh.info/name: "Media"
    service.homer.rajsingh.info/icon: "fas fa-tv"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: home
  hostnames:
    - "jellyfin.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: jellyfin
          port: 8096
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
